--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj
@@ -144,6 +144,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
+    <ClInclude Include="IndexOutOfBoundsException.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
