--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClInclude Include="Array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="IndexOutOfBoundsException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
