Stack Class fully implemented
Stack::Clear() could be so complicated. but we implemented the simplest one.

--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj
@@ -139,12 +139,12 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Array.cpp" />
     <ClCompile Include="DataStuctures and Algorithms.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h" />
     <ClInclude Include="IndexOutOfBoundsException.h" />
+    <ClInclude Include="Stack.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
