--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
@@ -18,15 +18,15 @@
     <ClCompile Include="DataStuctures and Algorithms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Array.cpp">
-      <Filter>Source Files</Filter>
-    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Array.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="IndexOutOfBoundsException.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Stack.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
