--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="DataStuctures and Algorithms.cpp">
+    <ClCompile Include="intro to DataStuctures and Algorithms.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
