--- a/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
+++ b/DataStuctures and Algorithms/DataStuctures and Algorithms.vcxproj.filters
@@ -32,5 +32,8 @@
     <ClInclude Include="StackOverflowException.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="List.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
